<resources>
    <string name="app_name">Compendium</string>
    <string name="action_settings">Ustawienia</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">Strona główna</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Następny</string>
    <string name="previous">Poprzedni</string>

    <string name="main_title_text">Kompendium</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="return_label">Powrót</string>

    <!-- Podpisy przycisków - strona główna -->
    <string name="author_info_label">O autorze</string>
    <string name="basic_info_label">Informacje ogólne</string>
    <string name="characters_label">Postacie</string>
    <string name="locations_label">Lokacje</string>
    <string name="trivias_label">Ciekawostki</string>
    <string name="about_label">O aplikacji</string>

    <!-- Podpisy przycisków - postaci -->
    <string-array name="characters_names">
        <item>Kapral Lin</item>
        <item>DOS</item>
        <item>Antyvir</item>
        <item>Norton</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="author_link">https://www.jonathanocean.pl/</string>
    <string name="go_to_page_label">Odwiedź stronę</string>
    <string name="author_fragment_title_text">O autorze</string>
    <string name="open_main_page_button_text">Otwórz stronę domową</string>
    <string name="jonathan_ocean_logo_desc">Jonathan Ocean Logo</string>
    <string name="jonathan_ocean_photo_desc">Photo of Jonathan Ocean</string>
    <string name="start_aisiri_button_label">Start</string>
    <string name="stop_aisiri_button_label">Stop</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="gps_info"></string>
    <!--    <string name="jonathan_ocean_logo_desc">Jonathan Ocean\'s logo</string>-->
</resources>